src/objects/IFACP_Opt_out__c.object
<CustomObject>
    <description>FDS OPS / used to track opt out request from Airlines for the agents or markets in the context of new Cargo program.</description>
    <fields>
        <fullName>Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HO of the agency account the airline is opting out from</description>
        <label>Agent Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account must be a cargo agent (sector Cargo Agent, record type Agency)</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <filterItems>
                <field>Account.Sector__c</field>
                <operation>equals</operation>
                <value>Cargo Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IFACP Opt outs</relationshipLabel>
        <relationshipName>IFACP_Opt_outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <description>Agent IATA code from agenct account</description>
        <formula>Agent_Account__r.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Agent IATA code from agenct account</inlineHelpText>
        <label>Agent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Code__c</fullName>
        <description>tracks the airline prefix code</description>
        <formula>Airline__r.Airline_Prefix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>tracks the airline prefix code</inlineHelpText>
        <label>Airline Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Country_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to track the opt out of an airline in a market</description>
        <label>Airline Country account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account must be an Airline HQ or BR record type</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Airline Headquarters, Airline Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IFACP Opt outs (Airline Country account)</relationshipLabel>
        <relationshipName>IFACP_Opt_outs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Airline HQ account opting out</description>
        <label>Airline HQ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IFACP Opt outs (Airline)</relationshipLabel>
        <relationshipName>IFACP_Opt_outs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF(NOT(ISBLANK(Agent_Account__c)), Agent_Account__r.IATA_ISO_Country__r.ISO_Code__c, Airline_Country_account__r.IATA_ISO_Country__r.ISO_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>either the country of the agent account or the airline country account (when opted out from a country)</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFACP_Opt_out_Active__c</fullName>
        <formula>isnull(Opt_Out_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFACP Opt out Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_End_Date__c</fullName>
        <description>tracks the end of the opt out, or withdrawal</description>
        <label>Opt Out End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Start_date__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>tracks the start of the opt out</description>
        <label>Opt Out Start date</label>
        <type>Date</type>
    </fields>
    <label>IFACP Opt out</label>
    <nameField>
        <displayFormat>IOU - {000000}</displayFormat>
        <label>IFACP Opt out Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IFACP Opt outs</pluralLabel>
    <recordTypes>
        <fullName>Airline_Operation_Opt_Out</fullName>
        <active>true</active>
        <description>used to track the opt out of an airline from a specific market</description>
        <label>Airline Operation Opt Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_FF_Opt_Out</fullName>
        <active>true</active>
        <description>used to track individual Airline - FF opt outs</description>
        <label>Individual FF Opt Out</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Agent_account_is_required</fullName>
        <active>true</active>
        <description>when the record type is individual FF opt out, the airline country account has to be empty, and the agent accounts needs to be filled in.</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Individual FF Opt out&quot;, OR(ISBLANK(Agent_Account__c),NOT(ISBLANK(Airline_Country_account__c))))</errorConditionFormula>
        <errorMessage>when the record type is individual FF opt out, the airline country account has to be empty, and the agent accounts needs to be filled in.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Airline_country_account_is_required</fullName>
        <active>true</active>
        <description>when the record type is airline operation opt out, the airline country account has to be filled in, and the agent accounts needs to be empty.</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Airline Operation Opt Out&quot; , or(NOT(ISBLANK(Agent_Account__c)),ISBLANK(Airline_Country_account__c)))</errorConditionFormula>
        <errorMessage>when the record type is airline operation opt out, the airline country account has to be filled in, and the agent accounts needs to be empty.</errorMessage>
    </validationRules>
</CustomObject>